# FinML

./: .gitignore  CMakeLists.txt  FinML_Comprehensive_Demo.ipynb  FinML_Technical_Documentation.md  README.md  github_approach.txt  micrograd.cpp  value.cpp  value.h
data/: aapl_2013_2023.csv
demo/: aapl_data_loader.cpp  cnn_pattern_model.cpp  hybrid_trading_model.cpp  hybrid_trading_model.h  lstm_options_arbitrage.cpp  lstm_stock_model.cpp  run_hybrid_trading_model.cpp  volatility_surface_arbitrage.cpp
include/finml/core/: matrix.h  value.h
include/finml/data/: timeseries.h
include/finml/layers/: linear_layer.h  lstm_layer.h
include/finml/models/: lstm.h  lstm_stock_predictor.h  stock_pattern_cnn.h  volatility_surface_predictor.h
include/finml/nn/: activation.h  conv.h  layer.h  linear.h  lstm.h  sequential.h
include/finml/optim/: adam.h  loss.h  optimizer.h  sgd.h
include/finml/options/: implied_volatility.h  pricing.h  strategies.h
python/: analyze_arbitrage.py  visualize_vol_surface.py
src/core/: matrix.cpp  value.cpp
src/data/: timeseries.cpp
src/layers/: linear_layer.cpp  lstm_layer.cpp
src/models/: lstm.cpp  lstm_stock_predictor.cpp  stock_pattern_cnn.cpp  volatility_surface_predictor.cpp
src/nn/: activation.cpp  conv.cpp  linear.cpp  lstm.cpp  lstm_stock_predictor.cpp  sequential.cpp
src/optim/: adam.cpp  loss.cpp  optimizer.cpp  sgd.cpp
src/options/: implied_volatility.cpp  pricing.cpp  strategies.cpp
tests/: CMakeLists.txt
